lnmp/iptables
# Generated by iptables-save v1.3.5 on Wed Jul 20 16:22:45 2011
*nat
:PREROUTING ACCEPT [625:44365]
:POSTROUTING ACCEPT [10:1067]
#blog-web-1
-A PREROUTING -i br0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.122.119:80
-A PREROUTING -i br0 -p tcp -m tcp --dport 2201 -j DNAT --to-destination 192.168.122.117:22
-A PREROUTING -i br0 -p tcp -m tcp --dport 2202 -j DNAT --to-destination 192.168.122.118:22
-A PREROUTING -i br0 -p tcp -m tcp --dport 5666 -j DNAT --to-destination 192.168.122.117:5666
-A PREROUTING -i br0 -p tcp -m tcp --dport 5667 -j DNAT --to-destination 192.168.122.118:5666
#output
-A POSTROUTING -s 192.168.122.0/255.255.255.0  -j SNAT --to-source 10.8.33.21
COMMIT
# Generatea by iptabes-save v1.3.5 on Wed Jul 20 16:22:45 2011
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [6579:984621]
:OUTPUT ACCEPT [5509:4582680]
-A INPUT -i lo -j ACCEPT
-A INPUT -i virbr0 -j ACCEPT
-A INPUT -i br0 -j ACCEPT
-A INPUT -i br0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i br0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i br0 -s 10.8.20.20 -j ACCEPT
-A INPUT -i br0 -s 10.8.20.100 -j ACCEPT
-A INPUT -i br0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i br0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i br0 -m state --state INVALID -j DROP
COMMIT
# Completed on Wed Jul 20 16:22:45 2011
