lnmp/iptables_vps_master
# Generated by iptables-save v1.3.5 on Wed Jul 20 16:22:45 2011
*nat
:PREROUTING ACCEPT [625:44365]
:POSTROUTING ACCEPT [10:1067]
:OUTPUT ACCEPT [3:723]
#phpchina.com
-A PREROUTING -i eth0 -p tcp -m state --state NEW --dport 22110 -j DNAT --to-destination 192.168.122.110:22 
#wintest
-A PREROUTING -i eth0 -p tcp -m state --state NEW --dport 4001 -j DNAT --to-destination 192.168.122.101:3389 
# wintest-cwrsync
#-A PREROUTING -i eth0 -p tcp -m state --state NEW --dport 873 -j DNAT --to-destination 192.168.122.101:873 
#vps100-ssh
-A PREROUTING -i eth0 -p tcp -m state --state NEW --dport 22100 -j DNAT --to-destination 192.168.122.100:22 
#Tvps-ssh
-A PREROUTING -i eth0 -p tcp -m state --state NEW --dport 22106 -j DNAT --to-destination 192.168.122.106:22 
-A PREROUTING -i eth0 -p tcp -m state --state NEW --dport 8080 -j DNAT --to-destination 192.168.122.106:8080 
#eduvps-ssh
-A PREROUTING -i eth0 -p tcp -m state --state NEW --dport 22108 -j DNAT --to-destination 192.168.122.108:22 
#cactivps-ssh
-A PREROUTING -i eth0 -p tcp -m state --state NEW --dport 22109 -j DNAT --to-destination 192.168.122.109:22 
#output
-A POSTROUTING -s 192.168.122.0/255.255.255.0  -j MASQUERADE 
COMMIT
# Completed on Wed Jul 20 16:22:45 2011
# Generated by iptables-save v1.3.5 on Wed Jul 20 16:22:45 2011
*filter
:INPUT DROP [0:0]
:FORWARD DROP [6579:984621]
:OUTPUT DROP [5509:4582680]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT  -m state --state INVALID -j LOG --log-prefix "DROP VALID"  --log-ip-optioins --log-tcp-options
-A INPUT  -m state --state INVALID -j DROP 
-A INPUT -i lo -j ACCEPT 
-A INPUT -i virbr0 -j ACCEPT 
-A INPUT -i eth0 -p tcp --syn -m state --state NEW --dport 22111 -j ACCEPT 
-A INPUT -i eth0 -p tcp --syn -m state --state NEW --dport 80 -j ACCEPT 
-A INPUT -i eth0 -p icmp  --icmp-type echo-request -j ACCEPT 
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -p tcp -s 192.168.122.0/255.255.255.0 --dport 80 --syn -m state --state NEW -j ACCEPT
-A FORWARD -p tcp -s 192.168.122.0/255.255.255.0 --dport 3690 --syn -m state --state NEW -j ACCEPT
-A FORWARD -p tcp -s 192.168.122.0/255.255.255.0 --dport 5666 --syn -m state --state NEW -j ACCEPT
-A FORWARD -p tcp -s 192.168.122.0/255.255.255.0 --dport 22 --syn -m state --state NEW -j ACCEPT
-A FORWARD -p tcp -s 192.168.122.0/255.255.255.0 --dport 25 --syn -m state --state NEW -j ACCEPT
-A FORWARD -p udp -s 192.168.122.0/255.255.255.0 --dport 53 -m state --state NEW -j ACCEPT
-A FORWARD -p tcp -i eth0 --dport 22 --syn -m state --state NEW -j ACCEPT
-A FORWARD -p tcp -i eth0 --dport 80 --syn -m state --state NEW -j ACCEPT
-A FORWARD -p tcp -i eth0 --dport 3690 --syn -m state --state NEW -j ACCEPT
-A FORWARD -p tcp -i eth0 --dport 3389 --syn -m state --state NEW -j ACCEPT
-A FORWARD -p tcp -i eth0 --dport 5666 --syn -m state --state NEW -j ACCEPT
-A FORWARD -p icmp --icmp-type echo-request -j ACCEPT
-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -m state --state INVALID -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o virbr0 -j ACCEPT
#-A OUTPUT -p tcp -m tcp --sport 80 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp --dport 25 --syn -m state --state NEW -j ACCEPT
-A OUTPUT -p udp --dport 123 -m state --state NEW -j ACCEPT
-A OUTPUT -p icmp --icmp-type echo-request -j ACCEPT
#-A OUTPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed Jul 20 16:22:45 2011
